try a hack to catch click event on old ios

--- a/kids/index.html
+++ b/kids/index.html
@@ -299,7 +299,7 @@
 		</style>
 	</head>
 	<body>
-		<div class="clickable">
+		<div class="clickable" onclick="">
 			<div class="main">
 				<div class="topbar">
 					<h1 class="logo">MOKOLÉ Kids</h1>
