adding aac sounds

--- a/kids/index.html
+++ b/kids/index.html
@@ -761,6 +761,7 @@
 			}						
 		</script>
 		<audio id="newgame-sound" onplaying="playing=this.id" onended="playing=null">
+			<source src="sound/newgame.aac" type="audio/aac">
 			<source src="sound/newgame.ogg" type="audio/ogg">
 			<source src="sound/newgame.mp3" type="audio/mpeg">
 		</audio>
@@ -770,10 +771,12 @@
 			<source src="sound/good.mp3" type="audio/mpeg">
 		</audio>
 		<audio id="wrong-sound" onplaying="playing=this.id" onended="playing=null">
+			<source src="sound/wrong.aac" type="audio/aac">
 			<source src="sound/wrong.ogg" type="audio/ogg">
 			<source src="sound/wrong.mp3" type="audio/mpeg">
 		</audio>
 		<audio id="win-sound" onplaying="playing=this.id" onended="playing=null">
+			<source src="sound/win.aac" type="audio/aac">
 			<source src="sound/win.ogg" type="audio/ogg">
 			<source src="sound/win.mp3" type="audio/mpeg">
 		</audio>
