--- a/kids/index.html
+++ b/kids/index.html
@@ -350,6 +350,26 @@
 			<div id="modal-overlay" class="overlay closed"></div>
 			<div id="overlay" class="overlay"><div id="cursor" class="closed"></div></div>
 		</div>
+		<audio id="newgame-sound" onplaying="playing=this.id" onended="playing=null">
+			<source src="sound/newgame.aac" type="audio/aac">
+			<source src="sound/newgame.ogg" type="audio/ogg">
+			<source src="sound/newgame.mp3" type="audio/mpeg">
+		</audio>
+		<audio id="good-sound" onplaying="playing=this.id" onended="playing=null">
+			<source src="sound/good.aac" type="audio/aac">
+			<source src="sound/good.ogg" type="audio/ogg">
+			<source src="sound/good.mp3" type="audio/mpeg">
+		</audio>
+		<audio id="wrong-sound" onplaying="playing=this.id" onended="playing=null">
+			<source src="sound/wrong.aac" type="audio/aac">
+			<source src="sound/wrong.ogg" type="audio/ogg">
+			<source src="sound/wrong.mp3" type="audio/mpeg">
+		</audio>
+		<audio id="win-sound" onplaying="playing=this.id" onended="playing=null">
+			<source src="sound/win.aac" type="audio/aac">
+			<source src="sound/win.ogg" type="audio/ogg">
+			<source src="sound/win.mp3" type="audio/mpeg">
+		</audio>
 		<script type="text/javascript">
 			// Generate initial keyboard in playground screen			
 			var ABC = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
@@ -748,6 +768,12 @@
 			
 			draw_keyboard();
 			
+			// Preloading audio
+			elts = document.getElementsByTagName("audio");
+			for (i = 0; i < elts.length; i++) {
+				elts[i].load();
+			}
+			
 			if (reloadJSON) {
 				load_puzzles(welcome);
 			} else {
@@ -760,25 +786,5 @@
 				});
 			}						
 		</script>
-		<audio id="newgame-sound" onplaying="playing=this.id" onended="playing=null">
-			<source src="sound/newgame.aac" type="audio/aac">
-			<source src="sound/newgame.ogg" type="audio/ogg">
-			<source src="sound/newgame.mp3" type="audio/mpeg">
-		</audio>
-		<audio id="good-sound" onplaying="playing=this.id" onended="playing=null">
-			<source src="sound/good.aac" type="audio/aac">
-			<source src="sound/good.ogg" type="audio/ogg">
-			<source src="sound/good.mp3" type="audio/mpeg">
-		</audio>
-		<audio id="wrong-sound" onplaying="playing=this.id" onended="playing=null">
-			<source src="sound/wrong.aac" type="audio/aac">
-			<source src="sound/wrong.ogg" type="audio/ogg">
-			<source src="sound/wrong.mp3" type="audio/mpeg">
-		</audio>
-		<audio id="win-sound" onplaying="playing=this.id" onended="playing=null">
-			<source src="sound/win.aac" type="audio/aac">
-			<source src="sound/win.ogg" type="audio/ogg">
-			<source src="sound/win.mp3" type="audio/mpeg">
-		</audio>
 	</body>
 </html>
