--- a/kids/index.html
+++ b/kids/index.html
@@ -434,7 +434,7 @@
 					if (playing == id) {
 						document.getElementById(id).currentTime = 0;
 					}
-					document.getElementById(id).play();					
+					document.getElementById(id).play();				
 				}
 			}
 
@@ -768,10 +768,12 @@
 			
 			draw_keyboard();
 			
-			// Preloading audio
+			// Improving audio
 			elts = document.getElementsByTagName("audio");
 			for (i = 0; i < elts.length; i++) {
-				elts[i].load();
+				elts[i].addEventListener("ended", function (e) {e.play(); e.pause();});
+				elts[i].play();
+				elts[i].pause();
 			}
 			
 			if (reloadJSON) {
