--- a/kids/index.html
+++ b/kids/index.html
@@ -771,8 +771,7 @@
 			// Improving audio
 			elts = document.getElementsByTagName("audio");
 			for (i = 0; i < elts.length; i++) {
-				elts[i].addEventListener("ended", function (e) {e.load();});
-				elts[i].load();
+				elts[i].addEventListener("ended", function (e) {e.currentTime = 0; });
 			}
 			
 			if (reloadJSON) {
