--- a/kids/index.html
+++ b/kids/index.html
@@ -273,7 +273,7 @@
 			<div class="main">
 				<div class="topbar">
 					<h1 class="logo">MOKOLÉ Kids</h1>
-					<div id="toggle-sound" class="volume unmute pulse" onclick="toggle_sound(this);"></div>
+					<div id="toggle-sound" class="volume unmute"></div>
 				</div>
 				<div id="screen-container" class="screen-container">
 					<div id="game-screen" class="screen playground">
@@ -320,26 +320,7 @@
 			<div id="modal-overlay" class="overlay closed"></div>
 			<div id="overlay" class="overlay"><div id="cursor" class="closed"></div></div>
 		</div>
-		<audio id="newgame-sound" onplaying="playing=this.id" onended="playing=null">
-			<source src="sound/newgame.aac" type="audio/aac">
-			<source src="sound/newgame.ogg" type="audio/ogg">
-			<source src="sound/newgame.mp3" type="audio/mpeg">
-		</audio>
-		<audio id="good-sound" onplaying="playing=this.id" onended="playing=null">
-			<source src="sound/good.aac" type="audio/aac">
-			<source src="sound/good.ogg" type="audio/ogg">
-			<source src="sound/good.mp3" type="audio/mpeg">
-		</audio>
-		<audio id="wrong-sound" onplaying="playing=this.id" onended="playing=null">
-			<source src="sound/wrong.aac" type="audio/aac">
-			<source src="sound/wrong.ogg" type="audio/ogg">
-			<source src="sound/wrong.mp3" type="audio/mpeg">
-		</audio>
-		<audio id="win-sound" onplaying="playing=this.id" onended="playing=null">
-			<source src="sound/win.aac" type="audio/aac">
-			<source src="sound/win.ogg" type="audio/ogg">
-			<source src="sound/win.mp3" type="audio/mpeg">
-		</audio>
+		<audio id="player"></audio>
 		<script type="text/javascript">
 			// Generate initial keyboard in playground screen			
 			var ABC = "ABCDEFGHIJKLMNOPQRSTUVWXYZ";
@@ -380,7 +361,7 @@
 				e.style.opacity = "0.95";
 				e.style.transform = "scale(0.9)";
 				if (e.innerHTML in G.c) {
-					play_sound("good-sound");
+					play_sound("good");
 					good_count += 1;
 					e.style.color = "rgb(23, 159, 59)";
 					elts = document.getElementById("puzzle").getElementsByClassName("c" + G.c[e.innerHTML]);
@@ -393,7 +374,7 @@
 						end_game();
 					}
 				} else {
-					play_sound("wrong-sound");
+					play_sound("wrong");
 					wrong_count += 1;
 					e.style.color = "rgb(218, 11, 44)";
 				}
@@ -402,9 +383,10 @@
 			function play_sound(id) {
 				if (sounds) {
 					if (playing == id) {
-						document.getElementById(id).currentTime = 0;
+						player.currentTime = 0;
 					}
-					document.getElementById(id).play();				
+					player.src = audioFiles[id];
+					player.play();				
 				}
 			}
 
@@ -535,7 +517,7 @@
 				// Prevent user interaction
 				document.getElementById("overlay").classList.remove("closed");
 				// Play starting sound
-				play_sound("newgame-sound");
+				play_sound("newgame");
 				//document.getElementById("overlay").style.cursor = "none";
 				// Reset keyboard
 				elts = document.getElementById("keyboard").getElementsByClassName("keyboard-button");
@@ -601,7 +583,7 @@
 					x.classList.remove("pulse");
 				}
 				// Play victory sound
-				play_sound("win-sound");
+				play_sound("win");
 				if (wrong_count == 0) id = "ace-score";
 				else if (wrong_count <= 4) id = "champion-score";
 				else if (wrong_count <= 8) id = "average-score";
@@ -716,7 +698,29 @@
 			        }
 			    });
 			}
-
+			
+			function preload_audio(id) {
+				var audio = new Audio();
+				audio.addEventListener("canplaythrough", loaded_audio, false);
+				audio.src = audioFiles[id];
+			}
+			
+			function loaded_audio() {
+				loadedAudio += 1;
+				if (loadedAudio == audioFiles.length) {
+					init_audio();
+				}
+			}
+			
+			function init_audio() {
+				sounds = true;
+				x = document.getElementById("toggle-sound");
+				x.classList.add("mute");
+				x.classList.remove("unmute");
+				x.addEventListener("click", toggle_sound, false);
+				x.classList.add("pulse");
+			}
+			
 			var G = null;						
 			var sounds = false;
 			var playing = null;
@@ -727,6 +731,14 @@
 			var currentGrid = 0;
 			var datas = null;
 			var lastBuild = null;
+			var player = document.getElementById("player");
+			var audioFiles = {
+				newgame: "sound/newgame.mp3",
+				good: "sound/good.mp3",
+				wrong: "sound/wrong.mp3",
+				win: "sound/win.mp3"
+			};
+			var loadedAudio = 0;
 			
 			window.addEventListener("keypress", function (event) {
 				if (!document.getElementById("modal-overlay").classList.contains("closed")) {
@@ -752,6 +764,10 @@
 			}, false);
 			
 			draw_keyboard();
+			
+			for (id in audioFiles) {
+				preload_audio(id);
+			}
 			
 			if (reloadJSON) {
 				load_puzzles(welcome);
