--- a/kids/index.html
+++ b/kids/index.html
@@ -743,6 +743,7 @@
 				win: "sound/win.mp3"
 			};
 			var loadedAudio = 0;
+			var iOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
 			
 			window.addEventListener("keypress", function (event) {
 				if (!document.getElementById("modal-overlay").classList.contains("closed")) {
@@ -762,6 +763,12 @@
 			}, false);
 			
 			window.addEventListener("click", function() {
+				if (iOS) {
+					iOS = false;
+					for (id in audioFiles) {
+						preload_audio(id);
+					}
+				}
 				if (!document.getElementById("modal-overlay").classList.contains("closed")) {
 					new_game();
 				} 
