--- a/kids/index.html
+++ b/kids/index.html
@@ -709,10 +709,11 @@
 			
 			function loaded_audio(id) {
 				console.log("loaded audio " + id);
-				if (loadedAudio.indexOf(id) == -1) {
-					loadedAudio.push(id);
+				if (loadedAudioFiles.indexOf(id) == -1) {
+					loadedAudioFiles.push(id);
 				}
-				if (loadedAudio.length == 4) {
+				if (loadedAudioFiles.length == 4) {
+					audioIsLoaded = true;
 					init_audio();
 				}
 			}
@@ -743,7 +744,8 @@
 				wrong: "sound/wrong.mp3",
 				win: "sound/win.mp3"
 			};
-			var loadedAudio = [];
+			var loadedAudioFiles = [];
+			var audioIsLoaded = false;
 			var iOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
 			
 			window.addEventListener("keypress", function (event) {
@@ -764,6 +766,11 @@
 			}, false);
 			
 			window.addEventListener("click", function() {
+				if (!audioIsLoaded) {
+					for (id in audioFiles) if (loadedAudioFiles.indexOf(id) == -1) {
+						preload_audio(id);
+					}
+				}
 				if (!document.getElementById("modal-overlay").classList.contains("closed")) {
 					new_game();
 				} 
