--- a/kids/index.html
+++ b/kids/index.html
@@ -727,6 +727,14 @@
 				x.classList.remove("closed");
 			}
 			
+			function fix_audio() {
+				if (!audioIsLoaded) {
+					for (id in audioFiles) if (loadedAudioFiles.indexOf(id) == -1) {
+						preload_audio(id);
+					}
+				}				
+			}
+			
 			var G = null;						
 			var sounds = false;
 			var playing = null;
@@ -749,6 +757,7 @@
 			var iOS = /iPad|iPhone|iPod/.test(navigator.userAgent) && !window.MSStream;
 			
 			window.addEventListener("keypress", function (event) {
+				fix_audio();
 				if (!document.getElementById("modal-overlay").classList.contains("closed")) {
 					new_game();
 				} else {
@@ -766,21 +775,14 @@
 			}, false);
 			
 			window.addEventListener("click", function() {
-				if (!audioIsLoaded) {
-					for (id in audioFiles) if (loadedAudioFiles.indexOf(id) == -1) {
-						preload_audio(id);
-					}
-				}
+				fix_audio();
 				if (!document.getElementById("modal-overlay").classList.contains("closed")) {
 					new_game();
 				} 
 			}, false);
 			
-			draw_keyboard();
-			
-			for (id in audioFiles) {
-				preload_audio(id);
-			}
+			draw_keyboard();			
+			fix_audio();
 			
 			if (reloadJSON) {
 				load_puzzles(welcome);
