market felt wide

--- a/kids/index.html
+++ b/kids/index.html
@@ -219,7 +219,7 @@
 			    left: 50%;
 			    transform: translateX(-50%);
 			    -webkit-transform: translateX(-50%);
-			    font-family: "Comic Sans MS", Chalkboard, "Marker Felt", sans-serif;
+			    font-family: "Comic Sans MS", Chalkboard, "Marker Felt Wide", sans-serif;
 			    color: rgb(255, 255, 255);
 			    color: rgba(255, 255, 255, 0.8);
 			    padding: 1vmin 2vmin;
