--- a/kids/index.html
+++ b/kids/index.html
@@ -792,7 +792,7 @@
 			
 			if ("serviceWorker" in navigator) {
 				window.addEventListener("load", function () {
-					navigator.serviceWorker.register("service-worker.js");
+					navigator.serviceWorker.register("/kids/service-worker.js");
 				});
 			}						
 		</script>
