--- a/kids/index.html
+++ b/kids/index.html
@@ -792,9 +792,12 @@
 			
 			if ("serviceWorker" in navigator) {
 				window.addEventListener("load", function () {
-					navigator.serviceWorker.register("/kids/service-worker.js");
+					navigator.serviceWorker.register("/kids/service-worker.js").then(
+						function () { console.log("serviceWorker registration complete."); },
+						function () { console.log("serviceWorker registration failure."); }
+					);
 				});
-			}						
+			} else console.log("serviceWorker is not supported.");				
 		</script>
 	</body>
 </html>
