--- a/kids/logo.html
+++ b/kids/logo.html
@@ -27,5 +27,25 @@
 	</head>
 	<body>
 		<h1 class="logo">MOKOLÉ <span class="red-k">K</span><span class="orange-i">i</span><span class="green-d">d</span><span class="pink-s">s</span></h1>
+		<audio id="newgame-sound" onplaying="playing=this.id" onended="playing=null">
+			<source src="sound/newgame.aac" type="audio/aac">
+			<source src="sound/newgame.ogg" type="audio/ogg">
+			<source src="sound/newgame.mp3" type="audio/mpeg">
+		</audio>
+		<audio id="good-sound" onplaying="playing=this.id" onended="playing=null">
+			<source src="sound/good.aac" type="audio/aac">
+			<source src="sound/good.ogg" type="audio/ogg">
+			<source src="sound/good.mp3" type="audio/mpeg">
+		</audio>
+		<audio id="wrong-sound" onplaying="playing=this.id" onended="playing=null">
+			<source src="sound/wrong.aac" type="audio/aac">
+			<source src="sound/wrong.ogg" type="audio/ogg">
+			<source src="sound/wrong.mp3" type="audio/mpeg">
+		</audio>
+		<audio id="win-sound" onplaying="playing=this.id" onended="playing=null">
+			<source src="sound/win.aac" type="audio/aac">
+			<source src="sound/win.ogg" type="audio/ogg">
+			<source src="sound/win.mp3" type="audio/mpeg">
+		</audio>		
 	</body>
 </html>
