--- a/kids/index.html
+++ b/kids/index.html
@@ -282,7 +282,7 @@
 					</div>
 				</div>
 			</div>
-			<div id="loading" class="modal">
+			<div id="loading" class="modal closed">
 				<h2>Chargement en cours...</h2>
 				<p><img src="img/tinified/loading.apng"></p>
 				<p>Merci de patienter pendant le chargement des grilles.</p>
