update css loading

--- a/kids/index.html
+++ b/kids/index.html
@@ -284,7 +284,7 @@
 			</div>
 			<div id="loading" class="modal closed">
 				<h2>Chargement en cours...</h2>
-				<p><img src="img/tinified/loading.apng"></p>
+				<p><img src="img/tinified/loading.png"></p>
 				<p>Merci de patienter pendant le chargement des grilles.</p>
 			</div>
 			<div id="panic" class="modal closed">
