--- a/kids/index.html
+++ b/kids/index.html
@@ -22,7 +22,7 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="96x96" href="favicon-96x96.png">
 		<link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-TileColor" content="#c69647">
 		<meta name="msapplication-TileImage" content="ms-icon-144x144.png">
 		<meta name="theme-color" content="#0fb8ad">
 		<link rel="manifest" href="manifest.json">
