don't play "good" sound on victory

--- a/kids/index.html
+++ b/kids/index.html
@@ -165,6 +165,7 @@
 				width: 100%;
 				height: 100%;
 				opacity: 0.8;
+				background-color: #c69647;
 			    background-image: url(img/tinified/wood-bg-02.png);
 			    background-repeat: repeat;
 			    background-size: contain;			    
@@ -373,7 +374,6 @@
 				e.style.opacity = "0.95";
 				e.style.transform = "scale(0.9)";
 				if (e.innerHTML in G.c) {
-					play_sound("good");
 					good_count += 1;
 					e.style.color = "rgb(23, 159, 59)";
 					elts = document.getElementById("puzzle").getElementsByClassName("c" + G.c[e.innerHTML]);
@@ -384,11 +384,13 @@
 					}
 					if (good_count == 12) {
 						end_game();
+					} else {
+						play_sound("good");						
 					}
 				} else {
-					play_sound("wrong");
 					wrong_count += 1;
 					e.style.color = "rgb(218, 11, 44)";
+					play_sound("wrong");
 				}
 			}
 			
