--- a/kids/index.html
+++ b/kids/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr" manifest="mokole.appcache.404">
+<html lang="fr" manifest="mokole.appcache">
 	<head>
 		<meta charset="utf-8">
 		<title>MOKOLÉ Kids</title>
