adding html audio, don't know why :)

--- a/speech.html
+++ b/speech.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<div id="output"></div>
+		<audio id="player"></audio>
 		<script type="text/javascript">
 			if ('speechSynthesis' in window) {
 				for (word of get_words_from_puzzle()) {
