Fix adsense code

--- a/palette.html
+++ b/palette.html
@@ -22,12 +22,16 @@
 				</div>
 				<div class="column">
 					<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+					<!-- Color-Tool-Mokole -->
+					<ins class="adsbygoogle"
+					     style="display:block"
+					     data-ad-client="ca-pub-8237054068776864"
+					     data-ad-slot="3759852311"
+					     data-ad-format="auto"
+					     data-full-width-responsive="true"></ins>
 					<script>
-					     (adsbygoogle = window.adsbygoogle || []).push({
-					          google_ad_client: "ca-pub-8237054068776864",
-					          enable_page_level_ads: true
-					     });
-					</script>					
+					(adsbygoogle = window.adsbygoogle || []).push({});
+					</script>
 				</div>
 			</div>
 			<div class="columns">
@@ -137,7 +141,7 @@
 				</div>
 				<div class="column is-8">
 					<br>
-					<p class="title has-text-info is-5 is-marginless">Why visualy distinct colors?</p>
+					<p class="title has-text-info is-5 is-marginless">Why visually distinct colors?</p>
 					<p class="is-size-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis turpis ante, ultricies ut elementum a, sagittis vitae dolor. Nunc semper tellus mauris, nec suscipit nulla elementum eget. Duis sit amet neque congue, elementum ante ut, fringilla diam. Cras eu ante tristique, pharetra neque nec, viverra turpis. Proin accumsan auctor est, non sollicitudin nunc.</p>
 				</div>
 			</div>
